# finance-tracker-bot

./: .gitignore  CHANGELOG.md  README.md  auth.py  constants.py  finance_tracker_bot.py  pyproject.toml  record.py  requirements.txt  settings.py  spreadsheet.py  summary.py  utils.py
.github/workflows/: python-app.yml
bot/: constants.py  currencies.py  finance_tracker_bot.py  handlers.py  main.py  models.py  openai_api.py  record.py  show.py  utils.py
tests/: test_currencies.py  test_record.py
