[tool.poetry]
name = "finance-tracker-bot"
version = "2.0.0"
description = "A Telegram bot that helps you with your personal finances"
authors = ["edoardob90 <edoardob90@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gspread = "^5.12.0"
python-dotenv = "^1.0.0"
python-telegram-bot = "^20.6"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pylint = "^3.0.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
